--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,12 @@
-# set -g escape-time 10
-bind c new-window -c '#{pane_current_path}'
 set -g prefix C-j
-unbind C-b
-setw -g mode-keys vi
 
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
+bind c new-window -c "#{pane_current_path}"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set-window-option -g mode-keys vi
 
-# set -g @plugin 'jimeh/tmux-themepack'
-# set -g @themepack 'powerline/default/cyan'
+set -g @plugin "arcticicestudio/nord-tmux" 
 
-set -g @plugin 'ryuta69/elly-tmux'
-
-# source-file ~/.tmux/iceberg_minimal.tmux.conf
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
