--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g prefix C-j
 
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",alacritty:RGB"
+set -ag terminal-overrides ",$TERM:Tc"
 
 bind c new-window -c "#{pane_current_path}"
 
